docs(guide): README.md 업데이트
배포 스크립트 사용 예시 업데이트 및 crontab에 작성한 브랜치 변경에 따른 check 스크립트 호출 테스트를 위해 push 진행